--- a/src/App.css
+++ b/src/App.css
@@ -53,20 +53,6 @@ a {
   margin-bottom: 1.5rem;
 }
 
-.wrapper {
-  /* position: relative; */
-  height: 250px;
-  width: 300px;
-  display: flex;
-  /* cursor: pointer; */
-  margin: 30px 0;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  border-radius: 5px;
-  border: 2px dashed #6990f2;
-}
-
 /* .wrapper .image {
   position: absolute;
   height: 100%;
@@ -75,7 +61,22 @@ a {
   align-items: center;
   justify-content: center;
 } */
-.wrapper img {
+.wrapper_image {
+  height: 150px;
+  width: 180px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  border: 2px dashed #6990f2;
+  background-size: 80px 80px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url('./assets/upload.png');
+}
+
+.wrapper_image img {
   height: 100%;
   width: 100%;
   object-fit: cover;
@@ -86,14 +87,25 @@ a {
   color: #9658fe;
 }
 
-.wrapper .cancel-btn {
+.remove_image {
   position: absolute;
-  font-size: 20px;
-  right: 15px;
-  top: 15px;
+  top: 0;
+  right: 5px;
   cursor: pointer;
   display: none;
+  z-index: 9999;
 }
-/* .wrapper:hover .cancel-btn {
-  display: block;
-} */
+
+.wrapper_image:hover .remove_image {
+  display: inline-block;
+}
+
+.drop-file-input input {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
