--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -33,6 +33,22 @@
   flex-wrap: nowrap;
 }
 
+.flex-1 {
+  flex: 1 1 0%;
+}
+
+.flex-auto {
+  flex: 1 1 auto;
+}
+
+.flex-initial {
+  flex: 0 1 auto;
+}
+
+.flex-none {
+  flex: none;
+}
+
 /* And Flexbox */
 
 /* Box Alignment */
@@ -1876,49 +1892,72 @@ padding-left: 0.875rem;	14px */
   margin-left: 0.75rem;
 }
 
-/* .mt-4
-margin-top: 1rem;	16px
-.mr-4
-margin-right: 1rem;	16px
-.mb-4
-margin-bottom: 1rem;	16px
-.ml-4
-margin-left: 1rem;	16px
-.mt-5
-margin-top: 1.25rem;	20px
-.mr-5
-margin-right: 1.25rem;	20px
-.mb-5
-margin-bottom: 1.25rem;	20px
-.ml-5
-margin-left: 1.25rem;	20px
-.mt-6
-margin-top: 1.5rem;	24px
-.mr-6
-margin-right: 1.5rem;	24px
-.mb-6
-margin-bottom: 1.5rem;	24px
-.ml-6
-margin-left: 1.5rem;	24px
-.mt-7
-margin-top: 1.75rem;	28px
-.mr-7
-margin-right: 1.75rem;	28px
-.mb-7
-margin-bottom: 1.75rem;	28px
-.ml-7
-margin-left: 1.75rem;	28px
-.mt-8
-margin-top: 2rem;	32px
-.mr-8
-margin-right: 2rem;	32px
-.mb-8
-margin-bottom: 2rem;	32px
-.ml-8
-margin-left: 2rem;	32px
-.mt-9
-margin-top: 2.25rem;	36px
-.mr-9
+.mt-4 {
+  margin-top: 1rem;
+}
+
+.mr-4 {
+  margin-right: 1rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
+}
+.ml-4 {
+  margin-left: 1rem;
+}
+.mt-5 {
+  margin-top: 1.25rem;
+}
+.mr-5 {
+  margin-right: 1.25rem;
+}
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+.ml-5 {
+  margin-left: 1.25rem;
+}
+.mt-6 {
+  margin-top: 1.5rem;
+}
+.mr-6 {
+  margin-right: 1.5rem;
+}
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+.ml-6 {
+  margin-left: 1.5rem;
+}
+.mt-7 {
+  margin-top: 1.75rem;
+}
+.mr-7 {
+  margin-right: 1.75rem;
+}
+.mb-7 {
+  margin-bottom: 1.75rem;
+}
+.ml-7 {
+  margin-left: 1.75rem;
+}
+.mt-8 {
+  margin-top: 2rem;
+}
+.mr-8 {
+  margin-right: 2rem;
+}
+.mb-8 {
+  margin-bottom: 2rem;
+}
+.ml-8 {
+  margin-left: 2rem;
+}
+.mt-9 {
+  margin-top: 2.25rem;
+}
+/* .mr-9
 margin-right: 2.25rem;	36px
 .mb-9
 margin-bottom: 2.25rem;	36px
@@ -2424,6 +2463,166 @@ margin-left: -0.875rem;	-14px */
   width: 100%;
 }
 
+/* Height */
+
+.h-0 {
+  height: 0px;
+}
+.h-1 {
+  height: 0.25rem;
+}
+.h-2 {
+  height: 0.5rem;
+}
+.h-3 {
+  height: 0.75rem;
+}
+
+.h-4 {
+  height: 1rem;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
+.h-6 {
+  height: 1.5rem;
+}
+
+.h-7 {
+  height: 1.75rem;
+}
+
+.h-8 {
+  height: 2rem;
+}
+
+.h-9 {
+  height: 2.25rem;
+}
+
+.h-10 {
+  height: 2.5rem;
+}
+
+.h-11 {
+  height: 2.75rem;
+}
+
+.h-12 {
+  height: 3rem;
+}
+
+.h-14 {
+  height: 3.5rem;
+}
+
+.h-16 {
+  height: 4rem;
+}
+
+.h-20 {
+  height: 5rem;
+}
+
+.h-24 {
+  height: 6rem;
+}
+
+.h-28 {
+  height: 7rem;
+}
+
+.h-32 {
+  height: 8rem;
+}
+
+.h-36 {
+  height: 9rem;
+}
+
+.h-40 {
+  height: 10rem;
+}
+
+.h-44 {
+  height: 11rem;
+}
+
+.h-48 {
+  height: 12rem;
+}
+
+.h-52 {
+  height: 13rem;
+}
+
+.h-56 {
+  height: 14rem;
+}
+
+.h-60 {
+  height: 15rem;
+}
+
+.h-64 {
+  height: 16rem;
+}
+
+/* .h-72
+height: 18rem;	288px
+.h-80
+height: 20rem;	320px
+.h-96
+height: 24rem;	384px
+.h-auto
+height: auto;	
+.h-px
+height: 1px;	
+.h-0.5
+height: 0.125rem;	2px
+.h-1.5
+height: 0.375rem;	6px
+.h-2.5
+height: 0.625rem;	10px
+.h-3.5
+height: 0.875rem;	14px
+.h-1/2
+height: 50%;	
+.h-1/3
+height: 33.333333%;	
+.h-2/3
+height: 66.666667%;	
+.h-1/4
+height: 25%;	
+.h-2/4
+height: 50%;	
+.h-3/4
+height: 75%;	
+.h-1/5
+height: 20%;	
+.h-2/5
+height: 40%;	
+.h-3/5
+height: 60%;	
+.h-4/5
+height: 80%;	
+.h-1/6
+height: 16.666667%;	
+.h-2/6
+height: 33.333333%;	
+.h-3/6
+height: 50%;	
+.h-4/6
+height: 66.666667%;	
+.h-5/6
+height: 83.333333%;	
+.h-full
+height: 100%;	
+.h-screen
+height: 100vh; */
+
 /* ======== And Sizing ======== */
 
 .hidden {
@@ -2452,6 +2651,12 @@ margin-left: -0.875rem;	-14px */
 
 /* BUTTON */
 
+/* Background */
+
+.bg-white {
+  background-color: #ffffff;
+}
+
 .btn-primary {
   color: #fff !important;
   background-color: #019376 !important;
@@ -2464,4 +2669,35 @@ margin-left: -0.875rem;	-14px */
   background-color: #019376 !important;
   color: #fff !important;
   border: none !important;
+}
+
+/* End Background */
+
+/* Border */
+
+.rounded {
+  border-radius: 0.25rem;
+}
+
+/* border-width */
+
+.border {
+  border-width: 1px;
+}
+
+/* border-color */
+
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgba(0, 0, 0, var(--tw-border-opacity));
+}
+
+.border-gray-100 {
+  --tw-border-opacity: 1;
+  border-color: rgba(243, 244, 246, var(--tw-border-opacity));
+}
+
+/* border-style */
+.border-solid {
+  border-style: solid;
 }
