--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,6 @@
 /* Flexbox */
 .flex {
-  display: flex;
+  display: flex !important;
 }
 .inline-flex {
   display: inline-flex;
@@ -59,7 +59,7 @@
   justify-content: flex-end;
 }
 .justify-center {
-  justify-content: center;
+  justify-content: center !important;
 }
 .justify-between {
   justify-content: space-between;
@@ -78,7 +78,7 @@
   align-items: flex-start;
 }
 .items-center {
-  align-items: center;
+  align-items: center !important;
 }
 .items-end {
   align-items: flex-end;
