--- a/src/modules/admin/product/form/styles.css
+++ b/src/modules/admin/product/form/styles.css
@@ -11,23 +11,63 @@
 }
 
 .cat-selected-item {
-  position: relative;
   color: rgb(1, 147, 118);
   font-weight: bold;
 }
 
-.cat-selected-item::before {
-  content: '>';
-  position: absolute;
-  /* right: 59px; */
-  font-size: 23px;
-  left: -21px;
-  font-weight: 600;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.cat-selected .cat-selected-item:first-child .iconArrows {
+  display: none;
 }
 
-.cat-selected-item:nth-child(2)::before {
+.category-product .category-product-item:first-child .iconArrows {
   display: none;
+}
+
+.wrapper_image {
+  height: 90px;
+  width: 100px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  border: 2px dashed #6990f2;
+  background-size: 50px 50px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url('../../../../assets/upload.png');
+}
+
+.wrapper_image img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.wrapper .icon {
+  font-size: 100px;
+  color: #9658fe;
+}
+
+.remove_image {
+  position: absolute;
+  top: 0;
+  right: 5px;
+  cursor: pointer;
+  display: none;
+  z-index: 9999;
+}
+
+.wrapper_image:hover .remove_image {
+  display: inline-block;
+}
+
+.drop-file-input input {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
 }
