--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,7 +7,7 @@
 }
 
 .flex-row {
-  flex-direction: column;
+  flex-direction: column !important;
 }
 
 .flex-row-reverse {
@@ -2462,6 +2462,38 @@ margin-left: -0.875rem;	-14px */
 .w-full {
   width: 100%;
 }
+.w-1_6 {
+  width: 16.666667%;
+}
+
+.w-1_5 {
+  width: 20%;
+}
+.w-1_4 {
+  width: 25%;
+}
+.w-1_3 {
+  width: 33.333333%;
+}
+.w-2_5 {
+  width: 40%;
+}
+
+.w-2_4 {
+  width: 50%;
+}
+
+.w-2_3 {
+  width: 66.666667%;
+}
+
+.w-3_4 {
+  width: 75%;
+}
+
+.w-4_5 {
+  width: 80% !important;
+}
 
 /* Height */
 
@@ -2697,7 +2729,22 @@ height: 100vh; */
   border-color: rgba(243, 244, 246, var(--tw-border-opacity));
 }
 
+.border-green-500 {
+  --tw-border-opacity: 1;
+  border-color: rgba(16, 185, 129, var(--tw-border-opacity));
+}
+
 /* border-style */
 .border-solid {
   border-style: solid;
+}
+.border-dashed {
+  border-style: dashed;
+}
+
+/* Typography */
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
