--- a/src/modules/admin/product/form/styles.css
+++ b/src/modules/admin/product/form/styles.css
@@ -75,3 +75,9 @@
 .classify {
   background-color: #fafafa;
 }
+
+.btn-cancel {
+  background-color: #ffffff !important;
+  color: red !important;
+  box-shadow: rgb(64 60 67 / 16%) 0px 2px 5px 1px;
+}
